<resources>
    <string name="app_name">sample_kotlin_app</string>
    <string name="fdis_subtitle">Test and preview SDK initialization, consent dialogs, and data sync.</string>
    <string name="default_dialog">Start with Default Dialog</string>
    <string name="start_with_custom_dialog">Start with Custom Dialog</string>
    <string name="tv_footer">© 2025 DataHarbor.co.ke — FDIS SDK</string>
    <string name="tv_title">Data Harbor FDIS SDK Demo App</string>
</resources>